k8s/spicedb.yaml
# This file contains an example configuration of SpiceDB in Kubernetes.
#
# It creates the following:
#   - A single node deployment with no persistence (in-memory datastore)
#   - Ports for the gRPC and HTTP APIs
#   - Ports for internal dispatching and metrics
#   - TLS is NOT securing any connections
#   - Logging configured at the debug log-level
#
# To apply this configuration execute the following:
# kubectl -n $YOUR_NAMESPACE create secret generic spicedb --from-literal=SPICEDB_GRPC_PRESHARED_KEY=$YOUR_SECRET
# YOUR_SECRET=grpc-spicedb-test
# kubectl -n $YOUR_NAMESPACE create -f example.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "spicedb"
  labels:
    app.kubernetes.io/name: "spicedb"
    app.kubernetes.io/version: "example"
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9090"
spec:
  selector:
    app.kubernetes.io/name: "spicedb"
  type: "ClusterIP"
  ports:
    - name: "grpc"
      port: 50051
      protocol: "TCP"
      targetPort: 50051
    - name: "http"
      port: 8443
      protocol: "TCP"
      targetPort: 8443
    - name: "dispatch"
      port: 50053
      protocol: "TCP"
      targetPort: 50053
    - name: "prometheus"
      port: 9090
      protocol: "TCP"
      targetPort: 9090
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "spicedb"
  labels:
    app.kubernetes.io/name: "spicedb"
    app.kubernetes.io/version: "example"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "spicedb"
      app.kubernetes.io/version: "example"
  strategy:
    type: "RollingUpdate"
    rollingUpdate:
      maxSurge: "25%"
      maxUnavailable: "25%"
  progressDeadlineSeconds: 600
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "spicedb"
        app.kubernetes.io/version: "example"
    spec:
      dnsPolicy: "ClusterFirst"
      restartPolicy: "Always"
      terminationGracePeriodSeconds: 30
      serviceAccountName: "spicedb"
      containers:
        - name: "spicedb"
          image: "quay.io/authzed/spicedb:latest"
          imagePullPolicy: "Always"
          command: ["spicedb", "serve"]
          resources:
            limits:
              cpu: "8"
            requests:
              cpu: "8"
          ports:
            - name: "grpc"
              containerPort: 50051
              protocol: "TCP"
            - name: "http"
              containerPort: 8443
              protocol: "TCP"
            - name: "dispatch"
              containerPort: 50053
              protocol: "TCP"
            - name: "prometheus"
              containerPort: 9090
              protocol: "TCP"
          readinessProbe:
            exec:
              command: ["grpc_health_probe", "-v", "-addr=localhost:50051"]
            failureThreshold: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
