k8s/spicedb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spicedb-ingress
  namespace: spicedb
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  rules:
  - host: "spicedb-dashboard.docker.internal"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:          
            name: spicedb
            port: 
              number: 8443
  - host: "spicedb-grpc.docker.internal"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:          
            name: spicedb
            port: 
              number: 50051
